数据库表 最终回

--- a/软件工程/火车售票管理系统/数据库/数据库表-最终回.md
+++ b/软件工程/火车售票管理系统/数据库/数据库表-最终回.md
@@ -1,8 +1,8 @@
 # 用户相关
 
-- 用户：登录系统的一个账号，是购买车票的主体。
-
-- 乘客：真实存在的一个个体，是乘坐火车的主体。
+> 用户：登录系统的一个账号，是购买车票的主体。
+>
+> 乘客：真实存在的一个个体，是乘坐火车的主体。
 
 
 
@@ -12,7 +12,7 @@
 | :---------: | :---------: | :------: | :------: | :------: | :------: | :--------------------: |
 |   **id**    |     int     |    是    |          |          | 用户编码 |                        |
 |    name     | varchar(10) |          |          |          | 用户昵称 |                        |
-|    type     |   tinyint   |          |          |          | 用户类型 |    0-用户, 1-管理员    |
+|    type     |   tinyint   |          |          |          | 用户类型 |  0-普通用户, 1-管理员  |
 |  telephone  | varchar(11) |          |          |          | 联系方式 |                        |
 |  password   | varchar(20) |          |          |          | 用户密码 |                        |
 |    state    |   tinyint   |          |          |          | 用户状态 | 0-正常, 1-冻结, 2-注销 |
@@ -22,7 +22,7 @@
 CREATE TABLE users (
 	`id`          INT UNSIGNED AUTO_INCREMENT,
 	`name`        VARCHAR(10) NOT NULL,
-	`type`        TINYINT NOT NULL COMMENT '0-用户, 1-管理员',
+	`type`        TINYINT NOT NULL COMMENT '0-普通用户, 1-管理员',
 	`telephone`   VARCHAR(11) NOT NULL,
 	`password`    VARCHAR(20) NOT NULL,
 	`state`       TINYINT NOT NULL COMMENT '0-正常, 1-冻结, 2-注销',
@@ -35,24 +35,27 @@ CREATE TABLE users (
 
 #### <span id="passengers">乘客信息表 passengers</span>
 
-| 字段名称  |  字段类型   | 是否主键 | 是否外键 | 是否为空 | 字段含义 |                             备注                             |
-| :-------: | :---------: | :------: | :------: | :------: | :------: | :----------------------------------------------------------: |
-|  **id**   |     int     |    是    |          |          | 乘客编码 |                                                              |
-|   name    | varchar(20) |          |          |          | 乘客姓名 |                                                              |
-| telephone | varchar(11) |          |          |          | 联系方式 |                                                              |
-|  ID_type  |   tinyint   |          |          |          | 证件类型 | 0-中华人民共和国居民身份证<br>1-港澳居民来往内地通行证<br>2-台湾居民来往大陆通行证 |
-|   ID_no   | varchar(30) |          |          |          | 证件号码 |                                                              |
-|   type    |   tinyint   |          |          |          | 乘客类型 |            0-成人, 1-学生, <br>2-儿童, 3-残疾军人            |
+| 字段名称  |  字段类型   | 是否主键 |       是否外键       | 是否为空 | 字段含义 |                             备注                             |
+| :-------: | :---------: | :------: | :------------------: | :------: | :------: | :----------------------------------------------------------: |
+|  **id**   |     int     |    是    |                      |          | 乘客编码 |                                                              |
+| *user_id* |     int     |          | [用户信息表](#users) |          | 用户编码 |                                                              |
+|   name    | varchar(20) |          |                      |          | 乘客姓名 |                                                              |
+| telephone | varchar(11) |          |                      |          | 联系方式 |                                                              |
+|  ID_type  |   tinyint   |          |                      |          | 证件类型 | 0-中华人民共和国居民身份证<br>1-港澳居民来往内地通行证<br>2-台湾居民来往大陆通行证 |
+|   ID_no   | varchar(30) |          |                      |          | 证件号码 |                                                              |
+|   type    |   tinyint   |          |                      |          | 乘客类型 |            0-成人, 1-学生, <br>2-儿童, 3-残疾军人            |
 
 ```sql
 CREATE TABLE passengers (
 	`id`        INT UNSIGNED AUTO_INCREMENT,
+    `user_id`   INT UNSIGNED NOT NULL,
 	`name`      VARCHAR(10) NOT NULL,
 	`telephone` VARCHAR(11) NOT NULL,
 	`ID_type`   TINYINT NOT NULL COMMENT '0-中华人民共和国居民身份证, 1-港澳台居民 来往内地通行证, 2-台湾居民来往大陆通行证',
 	`ID_no`     VARCHAR(30) NOT NULL,
 	`type`      TINYINT NOT NULL COMMENT '0-成人, 1-学生, 2-儿童, 3-残疾军人',
-	PRIMARY KEY (`id`)
+	PRIMARY KEY (`id`),
+    FOREIGN KEY ( `user_id` ) REFERENCES ( `id` ) 
 ) ENGINE = InnoDB CHARSET = utf8;
 ```
 
@@ -114,11 +117,11 @@ AS (
 
 #### <span id="stations">火车站编码表 stations</span>
 
-|   字段名称   |  字段类型   | 是否主键 |       是否外键        | 是否为空 |   字段含义   | 备注 |
-| :----------: | :---------: | :------: | :-------------------: | :------: | :----------: | :--: |
-|    **id**    |     int     |    是    |                       |          |  火车站编码  |      |
-|  *city_id*   |     int     |          | [城市编码表](#cities) |          | 所在城市编码 |      |
-| station_name | varchar(20) |          |                       |          |  火车站名称  |      |
+| 字段名称  |  字段类型   | 是否主键 |       是否外键        | 是否为空 |   字段含义   | 备注 |
+| :-------: | :---------: | :------: | :-------------------: | :------: | :----------: | :--: |
+|  **id**   |     int     |    是    |                       |          |  火车站编码  |      |
+| *city_id* |     int     |          | [城市编码表](#cities) |          | 所在城市编码 |      |
+|   name    | varchar(20) |          |                       |          |  火车站名称  |      |
 
 ```sql
 CREATE TABLE stations(
@@ -150,8 +153,9 @@ AS(
 
 # 火车相关
 
-- 火车信息表-火车：实指一列火车实体。 
-- 火车运行时刻表：指该列火车在某天运行的具体行为。
+> 火车信息表-火车：实指一列火车实体。 
+>
+> 火车运行时刻表：指该列火车在某天运行的具体行为。
 
 
 
@@ -167,8 +171,8 @@ AS(
 |         type          |   tinyint   |          |                           |          |  火车类型  | 0-普通旅客列车<br>1-普通动车组列车<br>2-高速动车组列车<br>3-其他 |
 |  *departure_station*  |     int     |          | [火车站编码表](#stations) |          | 起始站编码 |                                                              |
 | *destination_station* |     int     |          | [火车站编码表](#stations) |          | 目的站编码 |                                                              |
-|    departure_time     |    time     |          |                           |          |  出发时间  |                                                              |
-|       last_time       |    time     |          |                           |          |  运行时长  |                                                              |
+|    departure_time     |    time     |          |                           |          |  出发时间  |                            时间点                            |
+|       last_time       |    time     |          |                           |          |  运行时长  |                            时间段                            |
 
 
 ```sql
@@ -208,14 +212,14 @@ AS (
 
 #### <span id="runnings">火车运行表 runnings</span>
 
-|       字段名称        | 字段类型 | 是否主键 |       是否外键        | 是否为空 |   字段含义   |           备注           |
-| :-------------------: | :------: | :------: | :-------------------: | :------: | :----------: | :----------------------: |
-|        **id**         |   int    |    是    |                       |          | 火车运行编码 |                          |
-|      *train_id*       |   int    |          | [火车信息表](#trains) |          |   火车编码   |                          |
-|    departure_date     |   date   |          |                       |          |   发车日期   |                          |
-| actual_departure_time | datetime |          |                       |    是    | 实际发车时间 | 可为空，为空时表示未发车 |
-|  actual_arrive_time   | datetime |          |                       |    是    | 实际到达时间 | 课为空，为空时表示未到达 |
-|        cancel         | tinyint  |          |                       |          |   是否取消   |          01表示          |
+|       字段名称        | 字段类型 | 是否主键 |       是否外键        | 是否为空 |   字段含义   |       备注       |
+| :-------------------: | :------: | :------: | :-------------------: | :------: | :----------: | :--------------: |
+|        **id**         |   int    |    是    |                       |          | 火车运行编码 |                  |
+|      *train_id*       |   int    |          | [火车信息表](#trains) |          |   火车编码   |                  |
+|    departure_date     |   date   |          |                       |          |   发车日期   |                  |
+| actual_departure_time | datetime |          |                       |    是    | 实际发车时间 | 为空时表示未发车 |
+|  actual_arrive_time   | datetime |          |                       |    是    | 实际到达时间 | 为空时表示未到达 |
+|        cancel         | tinyint  |          |                       |          |   是否取消   |      01表示      |
 
 ```sql
 CREATE TABLE runnings (
@@ -253,6 +257,8 @@ AS (
 
 
 #### <span id='price'>火车价位表 price</span>
+
+注：方便起见，一个车厢内的所有座位都是相同类型。在这里，车厢类型决定座位类型
 
 |  字段名称  |  字段类型  | 是否主键 |       是否外键        | 是否为空 |    字段含义    |                  备注                  |
 | :--------: | :--------: | :------: | :-------------------: | :------: | :------------: | :------------------------------------: |
@@ -392,12 +398,15 @@ delimiter ;
 
 #### <span id="seats">座位信息表 seats</span>
 
+注：与座位模板表中存在冗余，此处牺牲存储空间提高查询效率
+
 |   字段名称    |  字段类型  | 是否主键 |        是否外键         | 是否为空 | 字段含义 |   备注    |
 | :-----------: | :--------: | :------: | :---------------------: | :------: | :------: | :-------: |
 |    **id**     |    int     |    是    |                         |          | 座位编码 |           |
-| *runnings_id* |    int     |          | [火车运行表](#runnings) |          | 火车编码 |           |
+| *runnings_id* |    int     |          | [火车运行表](#runnings) |          | 运行编码 |           |
 |  *cabin_id*   |    int     |          |  [车厢信息表](#cabins)  |          | 车厢编码 |           |
 |   position    | varchar(5) |          |                         |          |  座位号  | eg: 16排A |
+|     sold      |  tinyint   |          |                         |          | 是否出售 |  1：已售  |
 
 ```sql
 CREATE TABLE seats (
@@ -405,6 +414,7 @@ CREATE TABLE seats (
     `running_id` INT UNSIGNED NOT NULL,
     `cabin_id`   INT UNSIGNED NOT NULL,
     `position`   VARCHAR(5) NOT NULL,
+    `sold`       TINYINT NOT NULL,
 	PRIMARY KEY ( `id` ),
 	FOREIGN KEY ( `running_id` ) REFERENCES runnings ( `id` ),
     FOREIGN KEY ( `cabin_id` ) REFERENCES cabins ( `id` )
@@ -422,7 +432,8 @@ AS (
            runnings.destination                          AS destination,
            runnings.departure_datetime                   AS departure_datetime,
            runnings.arrive_datetime                      AS arrive_datetime,  
-    	   Concat(cabins.number, '车厢 ', seats.position) AS seat_position,  
+    	   Concat(cabins.number, '车厢 ', seats.position) AS seat_position,
+           seats.sold                                    AS sold,
     	   price.type                                    AS seat_type, 
            price.price                                   AS price
     FROM   view_runnings runnings,
@@ -440,6 +451,8 @@ AS (
 
 
 #### <span id="orders">订单信息表 orders</span>
+
+注：一个订单中可能存在多个乘车人购票，一个订单需要统一付款，付款前也可以统一取消。
 
 |  字段名称   | 字段类型 | 是否主键 |       是否外键       | 是否为空 |      字段含义      |    备注    |
 | :---------: | :------: | :------: | :------------------: | :------: | :----------------: | :--------: |
@@ -479,14 +492,14 @@ AS (
 
 #### <span id="details">订单详细 details</span>
 
-|    字段名称    | 字段类型 | 是否主键 |         是否外键          | 是否为空 |   字段含义   |                          备注                          |
-| :------------: | :------: | :------: | :-----------------------: | :------: | :----------: | :----------------------------------------------------: |
-|     **id**     |   int    |    是    |                           |          | 订单详细编码 |                                                        |
-|   *order_id*   |   int    |    是    |   [订单信息表](#orders)   |          |   订单编码   |                                                        |
-| *passenger_id* |   int    |          | [乘客信息表](#passengers) |          |   乘客编码   |                                                        |
-|   *seat_id*    |   int    |          |   [座位信息表](#seats)    |          |   座位编码   |                                                        |
-|     change     |   int    |          |                           |    是    |              | 为空时表示没有改签<br>不为空时值表示改签后订单详细编码 |
-|     refund     | tinyint  |          |                           |          |   是否退票   |                         1-退票                         |
+|    字段名称    | 字段类型 | 是否主键 |         是否外键          | 是否为空 |   字段含义   |                             备注                             |
+| :------------: | :------: | :------: | :-----------------------: | :------: | :----------: | :----------------------------------------------------------: |
+|     **id**     |   int    |    是    |                           |          | 订单详细编码 |                                                              |
+|   *order_id*   |   int    |    是    |   [订单信息表](#orders)   |          |   订单编码   |                                                              |
+| *passenger_id* |   int    |          | [乘客信息表](#passengers) |          |   乘客编码   |                                                              |
+|   *seat_id*    |   int    |          |   [座位信息表](#seats)    |          |   座位编码   |                                                              |
+|     change     |   int    |          |   [订单详细](#details)    |    是    |   订单详细   | 为空时表示没有改签<br>不为空时值表示改签后订单详细编码（自连接） |
+|     refund     | tinyint  |          |                           |          |   是否退票   |                            1-退票                            |
 
 ```sql
 CREATE TABLE details (
