--- a/软件工程/软工复习.md
+++ b/软件工程/软工复习.md
@@ -1,7 +1,16 @@
-> 免责声明：
+> ## 免责声明：
 >
-> - 黄鸡整理的 markdown 转，若导致考试丢分，黄鸡负责
-> - 文档中的章节序号，与书本序号不严格相同
+> 1. 此份整理是 **李浩然** 同志整理内容的 markdown 转，若文中有误，请直接联系前者
+> 2. 整理是我的个人行为，查看是你的个人行为，若因本份整理的内容导致考试丢分，概不负责
+> 3. 文档中的章节序号，与书本序号不严格相同
+
+> ## 计科班大题内容：
+>
+> 1. 判定树
+> 2. 环形复杂度
+> 3. 数据流图
+> 4. 状态转换图
+> 5. 六个库表
 
 
 
@@ -298,3 +307,83 @@
 ### 2.5.5 数据字典的练习 
 
 ![image-20211228184748440](软工复习.assets/image-20211228184748440.png)
+
+
+
+
+
+# 第三章 需求分析
+
+
+
+## 3.1 确定对系统的综合要求
+
+- 功能需求：这方面的需求指定系统必须提供的服务；
+- 性能需求：性能需求指定系统必须满足的定时约束或容量约束，通常包括速度（响应时间）、信息量速率、主存容量、磁盘容量、安全性等方面的需求；
+- 可靠性和可用性需求：可靠性需求定量地指定系统的可靠性；
+- 出错处理需求：这类需求说明系统对环境错误应该怎样响应；
+- 接口需求：接口需求描述应用系统与它的环境通信的格式；
+- 约束：设计约束或实现约束描述在设计或实现应用系统时应遵守的限制条件；
+- 逆向需求：逆向需求说明软件系统不应该做什么；
+- 将来可能提出的要求：应该明确地列出那些虽然不属于当前系统开发范畴，但是据分析将来很可能会提出来的要求。
+
+
+
+## 3.2 访谈
+
+
+
+### 3.2.1 正式访谈
+
+正式访谈时，系统分析员将提出一些事先准备好的具体问题。
+
+### 3.2.2 非正式访谈
+
+在非正式访谈中，分析员将提出一些用户可以自由回答的开放性问题，以鼓励被访问人员说出自己的想法。
+
+
+
+## 3.3 各种图的绘制
+
+- 数据模型（ER图）
+- 功能模型（数据流图）
+- 行为模型（状态图）
+
+
+
+## 3.4 联系
+
+
+
+### 3.4.1 一对一
+
+  \* 一个人对应一张身份证，一张身份证对应一个人
+
+![img](https://img-blog.csdn.net/20180110152542236?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvdTAxMzE0NDI4Nw==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+
+### 3.4.2 一对多
+
+  \* 一个班级拥有多个学生，一个学生只能够属于某个班级
+
+![img](https://img-blog.csdn.net/20180110153205823?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvdTAxMzE0NDI4Nw==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+
+### 3.4.3 多对多
+
+  \* 一个学生可以选修多门课程，一个课程可以被多个学生选修
+
+![img](https://img-blog.csdn.net/20180110154604022?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvdTAxMzE0NDI4Nw==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+
+
+
+## 3.5 数据规范化
+
+第一范式：每个属性值都必须是原子值，即仅仅是一个简单值而不含内部结构。
+
+第二范式：满足第一范式条件，而且每个非关键字属性都由整个关键字决定（而不是由关键字的一部分来决定）。
+
+第三范式：符合第二范式的条件，每个非关键字属性都仅由关键字决定，而且一个非关键字属性不能仅仅是对另一个非关键字属性的进一步描述（即一个非关键字属性值不依赖于另一个非关键字属性值）。
+
+范式越高，冗余度越小，表越多，理解越困难。
+
+
+
