--- a/软件工程/软工复习.md
+++ b/软件工程/软工复习.md
@@ -387,3 +387,80 @@
 
 
 
+
+
+# 第五章 总体设计
+
+> 总体设计的目的就是回答“**概括地说，系统应该如何实现**”这个问题。
+
+
+
+## 5.1 设计过程
+
+- 设想供选择的方案；
+- 选取合理的方案；
+- 推荐最佳方案；
+- 功能分解；
+- 设计软件结构；
+- 设计数据库；
+- 制定测试计划
+- 书写文档（包括系统说明，用户手册，测试计划，详细的实现计划，数据库设计结果）；
+- 审查和复查。
+
+
+
+## 5.2 设计原理
+
+
+
+### 5.2.1 模块化
+
+就是把程序划分成独立命名且可独立访问的模块，每个模块完成一个子功能，把这些模块集成起来构成一个整体，可以完成指定的功能满足用户的需求
+
+### 5.2.2 抽象
+
+抽象就是抽出事物的本质特性而暂时不考虑它们的细节。
+
+### 5.2.3 逐步求精
+
+为了能集中精力解决主要问题而尽量推迟对问题细节的考虑
+
+
+
+### 5.2.4 耦合
+
+> 耦合是对一个软件结构内不同模块之间互连程度的度量。耦合强弱取决于模块间接口的复杂程度，进入或访问一个模块的点，以及通过接口的数据。
+
+**公共环境耦合（全局变量）**
+
+当两个或多个模块通过一个公共数据环境相互作用时，它们之间的耦合称为公共环境耦合。
+
+
+
+### 5.2.5 内聚
+
+> 内聚标志着一个模块内各个元素彼此结合的紧密程度，它是信息隐藏和局部化概念的自然拓展。简单地说，理想内聚的模块只做一件事情。
+
+- 低内聚
+    - 偶然内聚：如果一个模块完成一组任务，这些任务彼此间即使有关系，关系也是很松散的
+    - 逻辑内聚：如果一个模块完成的任务在逻辑上属于相同或相似的一类
+    - 时间内聚：如果一个模块包含的任务必须在同一段时间内执行
+- 高内聚
+    - 顺序内聚：如果一个模块内的处理元素和同一个功能密切相关，而且这些处理必须顺序执行
+    - 功能内聚：如果模块内所有处理元素属于一个整体，完成一个单一的功能
+
+
+
+## 5.3 启发规则
+
+- 改进软件结构提高模块独立性；
+- 模块规模应该适中；
+- 深度、宽度、扇出和扇入都应适当；
+- 模块的作用域应该在控制域之内；
+- 力争降低模块接口的复杂程度；
+- 设计单入口单出口的模块；
+- 模块功能应该可以预测。
+
+
+
+## 5.4 层次图 P102
