--- a/软件工程/软工复习.md
+++ b/软件工程/软工复习.md
@@ -464,3 +464,62 @@
 
 
 ## 5.4 层次图 P102
+
+
+
+
+
+# 第六章 详细设计
+
+>  详细设计阶段的**根本目标是确定应该怎样具体地实现所要求的系统**，也就是说，经过这个阶段的设计工作，应该得出对目标系统的精确描述，从而在编码阶段可以把这个描述直接翻译成用某种程序设计语言书写的程序。
+>
+> **代码质量由详细设计分析人决定的**
+
+
+
+## 6.2 设计问题
+
+- 系统响应时间；
+- 用户帮助设施；
+- 出错信息处理；
+- 命令交互。
+
+## 6.3 判定树 P129
+
+
+
+## 6.5 程序复杂程度
+
+
+
+### 6.5.1 McCabe 方法
+
+McCabe方法根据程序控制流的复杂程度定量度量程序的复杂程度，这样度量出的结果称为程序的环形复杂度。
+
+
+
+**计算环形复杂度**
+
+1. 流图中线性无关的区域数等于环形复杂度
+2. 流图G的环形复杂度 `V(G) = E - N + 2` ，E是边数，N是点数
+3. 流图G的环形复杂度 `V(G) = P  + 1`，P是判定节点的数目
+
+图见P138
+
+
+
+**画流程图，转换**
+
+
+
+### 6.5.2 Halstead方法
+
+Halstead方法根据程序中运算符和操作数的总数来度量程序的复杂程度。
+
+
+
+## 6.6 练习
+
+P142 7
+
+![image-20211229161457353](软工复习.assets/image-20211229161457353.png)
