--- a/软件工程/软工复习.md
+++ b/软件工程/软工复习.md
@@ -33,7 +33,7 @@
 
 
 
-### 1.1.2 软件危机的典型表现
+### 1.1.2 软件危机的典型表现 ⭐
 
 （至少记三点，wyf如是说）
 
@@ -175,17 +175,86 @@
 
 
 
-## 1.4 软件过程
+## 1.4 软件过程⭐
 
 > 软件过程是为了开发出高质量的软件产品所需完成的一系列任务的框架，它规定了完成各项任务的工作步骤。
 
-|     模型     |                            特点                            |                             优点                             |                             缺点                             |
-| :----------: | :--------------------------------------------------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
-|   瀑布模型   | 阶段间具有顺序性和依赖性；推迟实现的观点；质量保证的观点。 | 它提供了一个模板，这个模板使得分析、设计、编码、测试和支持的方法可以在该模板下有一个共同的指导。虽然有不少缺陷但比在软件开发中随意的状态要好得多。 | 实际的项目大部分情况难以按照该模型给出的顺序进行，而且这种模型的迭代是间接的，这很容易由微小的变化而造成大的混乱。 |
-| 快速原型模型 |                                                            | 使用户能够感受到实际的系统，使开发者能够快速地构造出系统的框架。 | 产品的先天性不足，因为开发者常常需要做实现上的折中，可能采用不合适的操作系统或程序设计语言，以使原型能够尽快工作。 |
-|   增量模型   |                                                            | 人员分配灵活，刚开始不用投入大量人力资源，当核心产品很受欢迎时，可增加人力实现下一个增量；当配备的人员不能在设定的期限内完成产品时，它提供了一种先推出核心产品的途径，这样就可以先发布部分功能给客户，对客户起到镇静剂的作用。 | 至始至终开发者和客户纠缠在一起，直到完全版本出来；适合于软件需求不明确、设计方案有一定风险的软件项目。 |
+概括地说，软件过程描述了为了开发出客户需要的软件，什么人、在什么时候、做什么事以及怎样做这些事以实现某一个特定的具体目标。
 
-（模型的图片详见 P16-18）
+
+
+### 1.4.1 瀑布模型
+
+瀑布模型是将软件生存周期的各项活动规定为按固定顺序而连接的若干阶段工作。	
+
+**特点：**
+
+1. 阶段间具有顺序性和依赖性；
+2. 推迟实现的观点；
+3. 质量保证的观点。
+
+**优点：**
+
+1. 可强迫开发人员采用规范的方法
+2. 严格的规定了每个阶段必须提交的文档
+3. 要求每个阶段交出的所有产品都必须经过质量保证小组的仔细验证。
+
+**缺点：**
+
+1. “瀑布模型是由文档驱动的”，几乎完全依赖书面的规格说明，很可能导致最终开发出来的软件产品不能真正满足用户的需要。
+
+> ## [瀑布模型_百度百科 ](https://baike.baidu.com/item/瀑布模型/9817778)
+>
+> **优点**：
+>
+> - 为项目提供了按阶段划分的检查点。
+> - 当前一阶段完成后，您只需要去关注后续阶段。
+> - 可在[迭代模型](https://baike.baidu.com/item/迭代模型)中应用瀑布模型。
+> - 它提供了一个模板，这个模板使得分析、设计、编码、测试和支持的方法可以在该模板下有一个共同的指导。
+>
+> **缺点：**
+>
+> - 各个阶段的划分完全固定，阶段之间产生大量的文档，极大地增加了工作量。
+> - 由于开发模型是线性的，用户只有等到整个过程的末期才能见到开发成果，从而增加了开发风险。
+> - 通过过多的强制完成日期和里程碑来跟踪各个项目阶段。
+> - 瀑布模型的突出缺点是不适应用户需求的变化。
+
+
+
+### 1.4.2 快速原型模型
+
+快速原型是快速建立起来的可以在计算机上运行的程序，它所能完成的功能往往是最终产品能完成的功能的一个子集。
+
+**优点：**
+
+- 开发过程的后续阶段不会因为发现了规格说明文档的错误而进行较大的返工
+- 减少了在后续阶段需要改正前面阶段所犯错误的可能性
+
+> ## [快速原型模型_百度百科](https://baike.baidu.com/item/快速原型模型)
+>
+> **优点：**
+>
+> - 克服[瀑布模型](https://baike.baidu.com/item/瀑布模型)的缺点，减少由于[软件需求](https://baike.baidu.com/item/软件需求)不明确带来的开发风险。
+>
+> **缺点：**
+>
+> - 所选用的开发技术和工具不一定符合主流的发展；
+> - 快速建立起来的系统结构加上连续的修改可能会导致产品质量低下。
+
+
+
+### 1.4.3 增量模型
+
+把软件产品作为一系列的增量构件来设计、编码、集成和测试。每个构建由多个相互作用的模块构成并且能够完成特定的功能。
+
+**优点：**
+
+- 能在较短时间内向用户提交可完成部分工作的产品
+- 逐步增加产品功能可以使用户有较充裕的时间学习和适应新产品，从而减少一个全新的软件可能给客户组织带来的冲击
+
+**缺点：**
+
+- 新的增量构建集成到现有软件体系结构中时，必须不破坏原来已经开发的产品。
 
 
 
@@ -195,9 +264,9 @@
 
 
 
-## 2.1 可行性研究的任务
+## 2.1 可行性研究的任务⭐
 
-> 可行性研究的目的，就是用最小的代价在尽可能短的时间内确定问题是否能过解决。
+> 可行性研究的目的，就是用最小的代价在尽可能短的时间内确定问题是否能够解决。
 
 > 可行性研究最根本的任务是对以后的行动方针提出建议。
 
@@ -226,6 +295,10 @@
 ## 2.4 数据流图
 
 
+
+### 2.4.0 会画数据流图 ⭐
+
+![image-20220101170859171](软工复习.assets/image-20220101170859171.png)
 
 ### 2.4.1 数据流图的概念
 
@@ -266,6 +339,10 @@
 
 
 ## 2.5 数据字典
+
+
+
+### 2.5.0 会写数据字典 ⭐
 
 
 
@@ -343,13 +420,13 @@
 
 
 
-## 3.3 各种图的绘制
+## 3.3 各种图的绘制⭐
 
 - 数据模型（ER图）
 - 功能模型（数据流图）
 - 行为模型（状态图）
 
-
+<img src="软工复习.assets/image-20220101194628128.png" alt="image-20220101194628128" style="zoom:200%;" />
 
 ## 3.4 联系
 
@@ -375,7 +452,7 @@
 
 
 
-## 3.5 数据规范化
+## 3.5 数据规范化⭐
 
 第一范式：每个属性值都必须是原子值，即仅仅是一个简单值而不含内部结构。
 
