修改：耦合和内聚

--- a/软件工程/软工复习.md
+++ b/软件工程/软工复习.md
@@ -472,7 +472,7 @@
 
 
 
-## 5.1 设计过程
+## 5.1 设计过程⭐
 
 - 设想供选择的方案；
 - 选取合理的方案；
@@ -504,27 +504,67 @@
 
 
 
-### 5.2.4 耦合
+### 5.2.4 耦合⭐
 
 > 耦合是对一个软件结构内不同模块之间互连程度的度量。耦合强弱取决于模块间接口的复杂程度，进入或访问一个模块的点，以及通过接口的数据。
 
-**公共环境耦合（全局变量）**
+> **尽量使用数据耦合，少用控制耦合和特征耦合，限制公共环境耦合的范围，完全不适用内容耦合**
+
+
+
+#### 5.2.4.1 **数据耦合** - 低耦合
+
+如果两个模块彼此间通过参数交换信息，而且交换的信息仅仅是数据。
+
+
+
+#### 5.2.4.2 **数据耦合** - 中耦合
+
+如果两个模块彼此间通过参数交换信息，传递的信息中有控制信息
+
+
+
+#### 5.2.5.3 **特征耦合**
+
+当把整个数据结构作为参数传递而被调用的模块只需要使用其中一部分数据元素
+
+
+
+#### 5.2.4.4 **公共环境耦合（全局变量）**
 
 当两个或多个模块通过一个公共数据环境相互作用时，它们之间的耦合称为公共环境耦合。
 
+- 较松散的耦合：一个模块往公共环境送数据，另一个模块从公共环境取数据。
+- 介于数据耦合和控制耦合之间：两个模块都既往公共环境送数据又从公共环境取数据。
 
 
-### 5.2.5 内聚
+
+#### 5.2.4.5 **内容耦合** - 最高程度的耦合
+
+- 一个模块访问另一个模块的内部数据
+- 一个模块不通过正常入口而转到另一个模块的内部
+- 两个模块有一部分程序代码重叠
+- 一个模块有多个入口（意味着一个模块有多个功能）
+
+
+
+### 5.2.5 内聚⭐
 
 > 内聚标志着一个模块内各个元素彼此结合的紧密程度，它是信息隐藏和局部化概念的自然拓展。简单地说，理想内聚的模块只做一件事情。
 
 - 低内聚
-    - 偶然内聚：如果一个模块完成一组任务，这些任务彼此间即使有关系，关系也是很松散的
-    - 逻辑内聚：如果一个模块完成的任务在逻辑上属于相同或相似的一类
-    - 时间内聚：如果一个模块包含的任务必须在同一段时间内执行
+    - `0分`偶然内聚：如果一个模块完成一组任务，这些任务彼此间即使有关系，关系也是很松散的
+    - `1分`逻辑内聚：如果一个模块完成的任务在逻辑上属于相同或相似的一类
+    - `3分`时间内聚：如果一个模块包含的任务必须在同一段时间内执行
+- 中内聚
+    - `5分`过程内聚：如果一个模块内的处理元素是相关的，而且必须以特定次序执行
+    - `7分`通信内聚：如果模块中所有元素都使用同一个输入数据和（或）产生同一个输出数据
+
 - 高内聚
-    - 顺序内聚：如果一个模块内的处理元素和同一个功能密切相关，而且这些处理必须顺序执行
-    - 功能内聚：如果模块内所有处理元素属于一个整体，完成一个单一的功能
+    - `9分`顺序内聚：如果一个模块内的处理元素和同一个功能密切相关，而且这些处理必须顺序执行
+    - `10分`功能内聚：如果模块内所有处理元素属于一个整体，完成一个单一的功能
+
+
 
 
 
