--- a/软件工程/软工复习.md
+++ b/软件工程/软工复习.md
@@ -508,19 +508,19 @@
 
 > 耦合是对一个软件结构内不同模块之间互连程度的度量。耦合强弱取决于模块间接口的复杂程度，进入或访问一个模块的点，以及通过接口的数据。
 
-> **尽量使用数据耦合，少用控制耦合和特征耦合，限制公共环境耦合的范围，完全不适用内容耦合**
+> **尽量使用数据耦合，少用控制耦合和特征耦合，限制公共环境耦合的范围，完全不用内容耦合**
 
 
 
 #### 5.2.4.1 **数据耦合** - 低耦合
 
-如果两个模块彼此间通过参数交换信息，而且交换的信息仅仅是数据。
+如果两个模块彼此间通过数据交换信息。
 
 
 
 #### 5.2.4.2 **数据耦合** - 中耦合
 
-如果两个模块彼此间通过参数交换信息，传递的信息中有控制信息
+如果两个模块彼此间通过参数交换信息，并且传递的信息中有控制信息
 
 
 
