--- a/软件工程/软工复习.md
+++ b/软件工程/软工复习.md
@@ -640,3 +640,212 @@ P142 7
 Halstead方法根据程序中运算符和操作数的总数来度量程序的复杂程度。
 
 
+
+
+
+# 第七章 实现
+
+
+
+## 7.1 编码风格
+
+> 源程序代码的逻辑简明清晰、易读易懂是好程序的一个重要标准
+
+- 程序内部的文档：利用适当的阶梯形式使程序的层次结构清晰明显
+- 数据说明
+- 语句构造
+- 输入输出
+- 效率：程序运行时间、存储器效率、输入输出效率
+
+
+
+## 7.2 软件测试基础
+
+
+
+### 7.2.1 软件测试的目标⭐
+
+> 1. 测试是为了发现程序中的错误而执行程序的过程
+> 2. 好的测试方案是**极可能**发现迄今为止尚未发现的错误的测试方案
+> 3. 成功的测试是**发现了**至今为止尚未发现的错误的测试。
+
+
+
+### 7.2.2 软件测试准则
+
+- 所有测试都应该能追溯到用户需求；
+- 应该远在测试开始之前就制定出测试计划；
+- 把Pareto原理应用到软件测试中；
+- 应该从“小规模”测试开始，并逐步进行“大规模”测试；
+- 穷举测试是不可能的；
+- 为了达到最佳的测试效果，应该由独立的第三方从事测试工作。
+
+
+
+### 7.2.3 测试步骤
+
+1. 模块测试（单元测试）
+2. 子系统测试
+3. 系统测试
+4. 验收测试
+5. 平行运行
+
+
+
+## 7.3 单元测试
+
+
+
+### 7.3.1 测试重点
+
+- 模块接口；
+- 局部数据结构；
+- 重要的执行通路；
+- 出错处理通路。
+- 边界条件
+
+
+
+### 7.3.2 代码审查
+
+人工测试源程序可以由编写者本人非正式地进行，也可以由审查小组正式进行。后者称为代码审查
+
+
+
+### 7.3.3 计算机测试
+
+> 模块并不是一个独立的程序，因此必须为每个单元测试开发驱动软件和（或）存根软件。
+>
+> - 通常驱动程序就是一个“主程序”，它接收测试数据，把这些数据传送给被测试的模块，并印出有关结果
+> - 存根程序代替被测试的模块所调用的模块
+
+
+
+## 7.4 集成测试
+
+> 集成测试是测试和组装软件的系统化技术，主要目标是发现与接口有关的问题(系统测试与此类似)。
+
+
+
+### 7.4.1 自顶向下集成
+
+自顶向下集成方法从主控制模块开始，沿着程序的控制层次向下移动，逐渐把各个模块结合起来。
+
+1. 对主控制模块进行测试，测试时用存根程序代替所有直接附属于主控制模块的模块；
+
+2. 根据选定的结合策略(深度优先或宽度优先)，每次用一个实际模块代换一个存根程序(新结合进来的模块往往又需要新的存根程序)；
+
+3. 在结合进一个模块的同时进行测试；
+
+4. 为了保证加入模块没有引进新的错误，可能需要进行回归测试(即，全部或部分地重复以前做过的测试)。
+
+<img src="软工复习.assets/image-20220103224547035.png" alt="image-20220103224547035" style="zoom:150%;" />
+
+
+
+### 7.4.2 自底向上集成
+
+自底向上测试从“原子”模块(即在软件结构最低层的模块)开始组装和测试。
+
+1. 把低层模块组合成实现某个特定的软件子功能的族；
+2. 写一个驱动程序(用于测试的控制程序)，协调测试数据的输入和输出；
+3. 对由模块组成的子功能族进行测试；
+4. 去掉驱动程序，沿软件结构自下向上移动，把子功能族组合起来形成更大的子功能族
+
+<img src="软工复习.assets/image-20220103224552555.png" alt="image-20220103224552555" style="zoom: 150%;" />
+
+
+
+## 7.5 Alpha 和 Beta 测试
+
+- Alpha测试由用户在开发者的场所进行，并且在开发者对用户的“指导”下进行测试。开发者负责记录发现的错误和使用中遇到的问题。总之，Alpha测试是在受控的环境中进行的。
+
+- Beta测试由软件的最终用户们在一个或多个客户场所进行。Beta测试是软件在开发者不能控制的环境中的“真实”应用。
+
+
+
+## 7.6 白盒测试
+
+> 白盒测试是一种[测试用例设计](https://baike.baidu.com/item/测试用例设计/9391582)方法，盒子指的是被测试的[软件](https://baike.baidu.com/item/软件/12053)，白盒指的是盒子是可视的，即清楚盒子内部的东西以及里面是如何运作的。
+
+**设计测试方案是测试阶段的关键技术问题。**
+
+
+
+### 7.6.1 逻辑覆盖⭐
+
+所谓逻辑覆盖是对一系列测试过程的总称，这组测试过程逐渐进行越来越完整的通路测试。
+
+- **语句覆盖**：选择足够多的测试数据，使被测程序中每个语句至少执行一次
+- **判定覆盖**：不仅每个语句必须至少执行一次，而且每个判定的每种可能的结果都应该至少执行一次
+- **条件覆盖**：不仅每个语句至少执行一次，而且使判定表达式中的每个条件都取到各种可能的结果。
+
+
+
+## 7.7 黑盒测试
+
+> 黑盒测试，它是通过测试来检测每个功能是否都能正常使用。黑盒测试，它是通过测试来检测每个功能是否都能正常使用。
+
+黑盒测试并不能取代白盒测试，它是与白盒测试互补的测试方法，它很可能发现白盒测试不易发现的其他类型的错误。
+
+
+
+### 7.7.1 发现错误类型
+
+- 功能不正确或遗漏了功能；
+- 界面错误；
+- 数据结构错误或外部数据库访问错误；
+- 性能错误；
+- 初始化和终止错误。
+
+
+
+### 7.7.2 等价划分
+
+等价划分是一种黑盒测试技术，这种技术把程序的输入域划分为若干个数据类，据此导出测试用例。
+
+一个理想的测试用例能独自发现一类错误（例如对所有负整数的处理都不正确）。等价划分法力图设计出能发现若干类程序错误的测试用例，从而减少必须设计的测试用例的数目。
+
+
+
+### 7.7.3 边界值分析
+
+边界值分析是一种测试用例设计技术，它是等价划分的补充。
+
+
+
+#### 7.7.4 错误推测
+
+一般说来，即使是一个比较小的程序，可能的输入组合数也往往十分巨大，因此必须依靠测试人员的经验和直觉，从各种可能的测试方案中选出一些最可能引起程序出错的方案。
+
+对于程序中可能存在哪类错误的推测，是挑选测试方案时的一个重要因素。
+
+
+
+## 7.8 调试
+
+> 调试是在测试发现错误之后排除错误的过程。
+
+
+
+### 7.8.1 调试途径
+
+- 蛮干法
+- 回溯法：从发现症状的地方开始，人工沿程序的控制流往回追踪分析源程序代码，直到找出错误原因为止
+- 原因排除法
+
+
+
+## 7.9 软件可靠性
+
+
+
+### 7.9.1 可靠性
+
+> 软件可靠性是程序在给定的时间间隔内，按照规格说明书的规定成功地运行的概率
+
+
+
+### 7.9.2 可用性
+
+> 软件可用性是程序在给定的时间点，按照规格说明书的规定，成功地运行的概率
