--- a/软件工程/软工复习.md
+++ b/软件工程/软工复习.md
@@ -316,7 +316,7 @@
 
 （图见 P41）
 
-![查看源图像](https://gss0.baidu.com/-4o3dSag_xI4khGko9WTAnF6hhy/zhidao/wh%3D600%2C800/sign=2b177926c53d70cf4cafa20bc8ecfd38/00e93901213fb80e2fc54ac83ad12f2eb938949c.jpg)
+<img src="https://gss0.baidu.com/-4o3dSag_xI4khGko9WTAnF6hhy/zhidao/wh%3D600%2C800/sign=2b177926c53d70cf4cafa20bc8ecfd38/00e93901213fb80e2fc54ac83ad12f2eb938949c.jpg" alt="查看源图像" style="zoom:80%;" />
 
 
 
